Merge and change jacklak's PR