@@ -7,14 +7,19 @@ import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 import wueffi.MiniGameCore.MiniGameCore;
+import wueffi.MiniGameCore.commands.MiniGameCommand;
+import wueffi.MiniGameCore.managers.GameManager;
 import wueffi.MiniGameCore.managers.LobbyManager;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
-public class MiniGameTabCompleter implements TabCompleter {
+public final class MiniGameTabCompleter implements TabCompleter {
     private final MiniGameCore plugin;
+    private static final LobbyManager lobbyManager = MiniGameCore.getPlugin().getLobbyManager();
+    private static final Map<String, String> commandsPermissions = MiniGameCommand.getCommandsPermissions();
 
     public MiniGameTabCompleter(MiniGameCore plugin) {
         this.plugin = plugin;
@@ -28,73 +33,57 @@ public class MiniGameTabCompleter implements TabCompleter {
 
         List<String> completions = new ArrayList<>();
 
-        String[] commands = {"host", "join", "ready", "unready", "confirm", "leave", "start", "spectate", "unspectate","stats", "reload", "stopall", "stop", "ban", "unban"};
-        String[] permissions = {
-                "mgcore.host", "mgcore.join", "mgcore.ready", "mgcore.ready", "mgcore.confirm", "mgcore.leave", "mgcore.start",
-                "mgcore.spectate", "mgcore.spectate", "mgcore.stats", "mgcore.admin", "mgcore.admin", "mgcore.admin", "mgcore.admin", "mgcore.admin"
-        };
-
         if (args.length == 1) {
-            for (int i = 0; i < commands.length; i++) {
-                if (player.hasPermission(permissions[i])) {
-                    completions.add(commands[i]);
-                }
-            }
+            completions = commandsPermissions.entrySet().stream()
+                    .filter(e -> player.hasPermission(e.getValue()))
+                    .map(Map.Entry::getKey)
+                    .toList();
         } else if (args.length == 2) {
-            switch (args[0].toLowerCase()) {
+            String subcmd = args[0].toLowerCase();
+
+            if (!(commandsPermissions.containsKey(subcmd) && player.hasPermission(commandsPermissions.get(subcmd)))) {
+                return completions;
+            }
+
+            switch (subcmd) {
                 case "host":
-                    if (player.hasPermission("mgcore.host")) {
-                        if (!plugin.getBannedPlayers().contains(player.getUniqueId())) {
-                            completions = plugin.getAvailableGames();
-                        }
+                    if (!plugin.getBannedPlayers().contains(player.getUniqueId())) {
+                        completions = plugin.getAvailableGames();
                     }
                     break;
                 case "join":
-                    if (player.hasPermission("mgcore.join")) {
-                        if (!plugin.getBannedPlayers().contains(player.getUniqueId())) {
-                            completions = new ArrayList<>();
-                            for (Lobby lobby : LobbyManager.getInstance().getOpenLobbies()) {
-                                String lobbyId = lobby.getLobbyId();
-                                completions.add(lobbyId);
-                            }
-                        }
+                    if (!plugin.getBannedPlayers().contains(player.getUniqueId())) {
+                        completions = lobbyManager.getOpenLobbies().stream()
+                                .filter(l -> player.hasPermission(GameManager.getConfig(l).getJoinPerm()))
+                                .map(Lobby::getLobbyId)
+                                .toList();
                     }
                     break;
                 case "spectate":
-                    if (player.hasPermission("mgcore.spectate")) {
-                        completions = Bukkit.getOnlinePlayers().stream().map(Player::getName).collect(Collectors.toList());
-                        for (Lobby lobby : LobbyManager.getInstance().getOpenLobbies()) {
-                            String lobbyId = lobby.getLobbyId();
-                            completions.add(lobbyId);
-                        }
+                    completions = Bukkit.getOnlinePlayers().stream().map(Player::getName).collect(Collectors.toList());
+                    for (Lobby lobby : lobbyManager.getOpenLobbies()) {
+                        String lobbyId = lobby.getLobbyId();
+                        completions.add(lobbyId);
                     }
                     break;
-                case "stats":
-                    if (player.hasPermission("mgcore.stats")) {
-                        completions = Bukkit.getOnlinePlayers().stream()
-                                .map(Player::getName)
-                                .collect(Collectors.toList());
-                    }
+                case "stats", "ban", "unban": // yes that is correct!
+                    completions = Bukkit.getOnlinePlayers().stream()
+                            .map(Player::getName)
+                            .collect(Collectors.toList());
                     break;
                 case "stop":
-                    if (player.hasPermission("mgcore.admin")) {
-                        completions = new ArrayList<>();
-                        for (Lobby lobby : LobbyManager.getInstance().getOpenLobbies()) {
-                            String lobbyId = lobby.getLobbyId();
-                            completions.add(lobbyId);
-                        }
-                    }
-                    break;
-                case "ban", "unban":
-                    if (player.hasPermission("mgcore.admin")) {
-                        completions = Bukkit.getOnlinePlayers().stream().map(Player::getName).collect(Collectors.toList());
+                    completions = new ArrayList<>();
+                    for (Lobby lobby : lobbyManager.getOpenLobbies()) {
+                        String lobbyId = lobby.getLobbyId();
+                        completions.add(lobbyId);
                     }
                     break;
             }
         }
 
+        String lastTyped = args[args.length - 1].toLowerCase();
         return completions.stream()
-                .filter(s -> s.toLowerCase().startsWith(args[args.length - 1].toLowerCase()))
-                .collect(Collectors.toList());
+                .filter(s -> s.toLowerCase().startsWith(lastTyped))
+                .toList();
     }
 }
